# morpheus

./: .editorconfig  .gitignore  .old_travis.yml  .pre-commit-config.yaml  .travis.yml  Aptfile  LICENSE  Makefile  Procfile  README.md  README.rst  activate.sh  cli.py  data_transfer.py  docker-compose.beta.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  donk.yml  flow.md  heroku.yml  pyproject.toml  requirements.txt  run-es.sh  run.py  setup.cfg  setup.py  start-prod.sh
.github/: dependabot.yml
.github/workflows/: main.yml
app/: main.py  worker.py
app/common/: auth.py
app/common/api/: errors.py
app/core/: bootstrap.sql  celery.py  config.py  database.py  logging.py  post_bootstrap.sql
app/ext/: clients.py
app/messages/: models.py  schemas.py  tasks.py
app/messages/api/: common.py  email.py  messages.py  sms.py  subaccounts.py  webhooks.py
app/render/: __init__.py
app/sentry/: setup.py
app/static/: styles.css
app/templates/: not-found.jinja
app/templates/user/: base-page.jinja
data_transfer/: .dockerignore  Dockerfile.es  run-es.sh  run.py
deploy/: compose  compose-up  create-beta-machine  create-machine  deploy
docker/: Dockerfile
elasticsearch/: Dockerfile
mandrill-mock/: Dockerfile  load.py  server.py
monitor/: Dockerfile  dockbeat.yml
morpheus/: Dockerfile  es.py  logs.py  main.py  models.py  requirements.txt  requirements_one.txt  requirements_two.txt  run.py  settings.py  utils.py  views.py  worker.py
morpheus/app/: crud.py  db.py  es.py  ext.py  logs.py  main.py  management.py  mandrill.py  middleware.py  models.py  models.sql  patches.py  schema.py  settings.py  utils.py  views.py  worker.py
morpheus/app/extra/: admin.html  default-email-template.mustache  default-styles.scss  index.html  sms-display-preview.html  styles.css
morpheus/app/render/: main.py
morpheus/app/sql/: logic.sql  models.sql
morpheus/app/static/: styles.css
morpheus/app/templates/: admin-base.jinja  admin-get.jinja  admin-list.jinja  admin.jinja  index.jinja  message-details-page.jinja  message-details.jinja  sms-display-preview.jinja
morpheus/app/templates/user/: base-page.jinja  details.jinja  list.jinja  preview.jinja
morpheus/app/views/: common.py  email.py  messages.py  sms.py  subaccounts.py  webhooks.py
morpheus/extra/: default-email-template.mustache
nginx/: Dockerfile  dev.nginx.conf  maintenance.html  nginx.conf
nginx/dev/: Dockerfile  nginx.conf
nginx/prod/: Dockerfile  allowed.nginx.conf  nginx.conf
nginx/test-keys/: cert.pem  key.pem
packaging/morpheus-mail/: setup.py
src/: Dockerfile  cli.py  crud.py  db.py  ext.py  llm_client.py  main.py  management.py  mandrill.py  models.py  models.sql  patches.py  requirements.txt  schema.py  settings.py  utils.py  version.py  worker.py
src/extra/: default-styles.scss
src/render/: main.py
src/schemas/: messages.py  models.py  session.py  webhooks.py
src/spam/: email_checker.py  llm_prompt.py  services.py  spam_check.py
src/templates/user/: base-page.jinja  preview.jinja
src/views/: common.py  email.py  messages.py  sms.py  subaccounts.py  utils.py  webhooks.py
src/worker/: __init__.py  email.py  scheduler.py  sms.py  webhooks.py
telegraf/: Dockerfile  telegraf.conf
tests/: check_debug.sh  conftest.py  dummy_server.py  requirements.txt  test_admin.py  test_aux.py  test_boot_bootstrap.py  test_email.py  test_main.py  test_parity.py  test_pool_exhaustion.py  test_render.py  test_review_fixes.py  test_sms.py  test_user_display.py  utils.py
