[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus-mail"
version = "1.0.41"
description = "Email rendering engine from morpheus"
readme = {text = """
Note: this only installs the rendering logic for `morpheus <https://github.com/tutorcruncher/morpheus>` \
for testing and email preview.

Everything else is excluded to avoid installing unnecessary packages.
""", content-type = "text/plain"}
authors = [{name = "Samuel Colvin", email = "s@muelcolvin.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
]
dependencies = [
    "chevron>=0.11.1",
    "libsass>=0.13.2",
    "misaka>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/tutorcruncher/morpheus"

[tool.setuptools.packages.find]
where = ["."]
include = ["morpheus.render"]

[tool.setuptools.package-dir]
"morpheus.render" = "src/render"

[tool.uv]
default-groups = ["app", "dev"]

[dependency-groups]
app = [
    "aiofiles==23.1.0",
    "aioredis==1.3.1",
    "arq==0.22",
    "buildpg==0.4",
    "chevron==0.14.0",
    "click==8.1.3",
    "fastapi==0.68.1",
    "foxglove-web==0.0.28",
    "jinja2==3.1.2",
    "libsass==0.22.0",
    "misaka==2.1.1",
    "MarkupSafe==2.1.2",
    "phonenumbers==8.13.6",
    "pydantic[email]==1.9.2",
    "python-multipart==0.0.6",
    "python-pdf==0.39",
    "requests==2.28.2",
    "starlette==0.14.2",
    "logfire[fastapi,requests]",
    "sentry-sdk==2.19.2",
    "tqdm==4.64.1",
    "ua-parser==0.16.1",
    "uvicorn==0.20.0",
    "ipython==8.11.0",
    "setuptools==78.0.2",
    "openai==1.85.0",
    "python-dotenv==1.1.1",
]
dev = [
    "aiohttp==3.9.5",
    "coverage==7.2.1",
    "docutils==0.19",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "pytest-mock==3.10.0",
    "pytest-sugar==0.9.6",
    "pytest-timeout==2.1.0",
    "pre-commit",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:asyncio.base_events",
]
timeout = 20
markers = [
    "spam: Using this marker on a test will mark the emails that test as spam.",
    "spam_service_error: Using this marker on a test will mark the emails that test as spam service error.",
]

[tool.coverage.run]
branch = true
omit = ["src/patches.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
